--- a/admin/pages/forgotPassword.html
+++ b/admin/pages/forgotPassword.html
@@ -8,7 +8,7 @@
         <form name="forgot">
           <div class="form-group has-feedback">
             <input type="email" name="email" class="form-control" placeholder="Email" ng-model="password.user_email" required>
-            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+            <span class="glyphicon fa fa-user form-control-feedback"></span>
           </div>
           <div class="row">
             <div class="col-xs-12">
@@ -31,15 +31,15 @@
         <form name="forgot">
           <div class="form-group has-feedback">
             <input type="password" name="pwd" class="form-control" placeholder="New password" ng-model="password.password" required>
-            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
             <input type="password" name="cpwd" class="form-control" placeholder="Confirm password" ng-model="password.cpass" required>
-            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
             <input type="password" name="otp" class="form-control" placeholder="Enter OTP" ng-model="password.otp" required>
-            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
           </div>
           <div class="row">
             <div class="col-xs-12">
