--- a/admin/pages/sidebar.html
+++ b/admin/pages/sidebar.html
@@ -12,18 +12,18 @@
     <ul class="sidebar-menu">
       <li class="header">MAIN NAVIGATION</li>
       <li class="active treeview">
-        <a href="" ui-sref="dashboard">
+        <a ui-sref="dashboard">
           <i class="fa fa-dashboard"></i> <span>Dashboard</span>
         </a>
       </li>
       <li class="treeview">
-       <a href="" ui-sref="userProfile">
+       <a  ui-sref="userProfile">
          <i class="fa fa-cogs"></i>
          <span>My Profile</span>
        </a>
      </li>
       <li class="treeview" ng-if="roll_id == '3'">
-        <a href="">
+        <a>
           <i class="fa fa-graduation-cap" aria-hidden="true"></i>
           <span>Employee</span>
           <i class="fa fa-angle-left pull-right"></i>
@@ -34,7 +34,7 @@
         </ul>
       </li>
       <li class="treeview">
-        <a href="" ui-sref="retiredemployeelist">
+        <a ui-sref="retiredemployeelist">
           <i class="fa fa-cubes" aria-hidden="true"></i>
           <span>Pension Scheme</span>
         </a>
