--- a/admin/pages/dashboard.html
+++ b/admin/pages/dashboard.html
@@ -55,7 +55,7 @@
          <div class="icon">
            <i class="ion ion-bag"></i>
          </div>
-         <a ui-sref="" class="small-box-footer" >View Status<i class="fa fa-arrow-circle-right"></i></a>
+         <a class="small-box-footer" >View Status<i class="fa fa-arrow-circle-right"></i></a>
        </div>
      </div>
 
@@ -68,7 +68,7 @@
        <div class="icon">
          <i class="ion ion-stats-bars"></i>
        </div>
-       <a class="small-box-footer" ui-sref="">View Status <i class="fa fa-arrow-circle-right"></i></a>
+       <a class="small-box-footer">View Status <i class="fa fa-arrow-circle-right"></i></a>
      </div>
    </div>
    <div class="col-lg-4 col-xs-6">
@@ -80,7 +80,7 @@
        <div class="icon">
          <i class="ion ion-person-add"></i>
        </div>
-       <a  ui-sref="employeeList-bystatus({status: 'All'})" class="small-box-footer">View Status <i class="fa fa-arrow-circle-right"></i></a>
+       <a  class="small-box-footer">View Status <i class="fa fa-arrow-circle-right"></i></a>
      </div>
    </div>
     </div>
