--- a/admin/pages/login.html
+++ b/admin/pages/login.html
@@ -8,7 +8,7 @@
         <form name="login">
           <div class="form-group has-feedback">
             <input type="text" class="form-control" placeholder="Email" ng-model="user.username">
-            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+            <span class="glyphicon fa fa-user form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
             <input type="password" class="form-control" placeholder="Password" ng-model="user.password">
