--- a/admin/pages/sectionEmployeeDetails.html
+++ b/admin/pages/sectionEmployeeDetails.html
@@ -1,7 +1,6 @@
 <section class="content-header">
   <h1>
      Retired Employee Documents
-    <small>Control panel</small>
   </h1>
 </section>
 <section class="content" ng-init="loadEmpProfile()">
@@ -121,75 +120,41 @@
                   <input type="text" class="form-control" ng-model="retired_employee.dod" readonly>
                 </div>
               </div>
-              <div class="form-group" ng-class="{'has-error': (employeepension.dept_refno.$invalid && employeepension.dept_refno.$touched)}">
+              <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">Department Ref.No</label>
                 <div class="col-sm-8">
-                  <input type="text" name="dept_refno" placeholder="Department Ref.No" class="form-control" ng-model="retired_employee.department_ref_no" required ng-pattern="/^[0-9]+$/">
-                  <span class="help-block" ng-show="employeepension.dept_refno.$error.required && employeepension.dept_refno.$touched">Please enter Department Ref No</span>
-                  <span class="help-block" ng-show="employeepension.dept_refno.$error.pattern && employeepension.dept_refno.$touched">Reference no should be numeric</span>
+                  <input type="text" class="form-control" ng-model="retired_employee.department_ref_no" readonly>
                 </div>
               </div>
-              <div class="form-group" ng-class="{'has-error': (employeepension.dept_date.$invalid && employeepension.dept_date.$touched)}">
+              <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">Department Ref Date</label>
                 <div class="col-sm-8">
-                  <p class="input-group">
-                    <input type="text" class="form-control" name="dept_date" placeholder=" Department Reference Date" uib-datepicker-popup ng-model="retired_employee.department_ref_date" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-                    <span class="input-group-btn">
-                      <button type="button" class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </span>
-                  </p>
+                  <input type="text" class="form-control" ng-model="retired_employee.department_ref_date" readonly>
                 </div>
               </div>
-              <div class="form-group" ng-class="{'has-error': (employeepension.section_refno.$invalid && employeepension.section_refno.$touched)}">
+              <div class="form-group" >
                 <label for="inputPassword3" class="col-sm-3 control-label">Section Ref.No</label>
                 <div class="col-sm-8">
-                  <input type="text" name="section_refno" placeholder="Section Ref.No" class="form-control" ng-model="retired_employee.section_ref_no" required ng-pattern="/^[0-9]+$/">
-                  <span class="help-block" ng-show="employeepension.section_refno.$error.required && employeepension.section_refno.$touched">Please enter section Ref No</span>
-                  <span class="help-block" ng-show="employeepension.section_refno.$error.pattern && employeepension.section_refno.$touched">Reference no should be numeric</span>
+                  <input type="text" class="form-control" ng-model="retired_employee.section_ref_no" readonly>
                 </div>
               </div>
               <div class="form-group" ng-class="{'has-error': (employeepension.section_date.$invalid && employeepension.section_date.$touched)}">
                 <label for="inputPassword3" class="col-sm-3 control-label">Section Ref Date</label>
                 <div class="col-sm-8">
-                  <p class="input-group">
-                    <input type="text" class="form-control" name="section_date" uib-datepicker-popup ng-model="retired_employee.section_ref_date" placeholder="Section Ref Date" is-open="popup1.opened1" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-                    <span class="input-group-btn">
-                      <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </span>
-                  </p>
+                  <input type="text" class="form-control" ng-model="retired_employee.section_ref_date" readonly>
                 </div>
               </div>
-              <div class="form-group" ng-class="{'has-error': (employeepension.file_no.$invalid && employeepension.file_no.$touched)}">
+              <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">File No</label>
                 <div class="col-sm-8">
-                  <input type="text" placeholder="File Number" name="file_no" class="form-control" ng-model="retired_employee.file_no" required>
-                  <span class="help-block" ng-show="employeepension.file_no.$error.required && employeepension.file_no.$touched">Please enter File No</span>
+                  <input type="text" class="form-control" ng-model="retired_employee.file_no" readonly>
                 </div>
               </div>
-              <div class="form-group" ng-class="{'has-error': (employeepension.department.$invalid && employeepension.department.$touched)}">
-                <label for="inputPassword3" class="col-sm-3 control-label">Send To</label>
-                <div class="col-sm-8">
-                    <select class="form-control" ng-model="retired_employee.send_to" name="department" required>
-                      <option value="">Select One</option>
-                      <option value="ULB">ULB</option>
-                      <option value="Audit">Audit</option>
-                    </select>
-                    <span class="help-block" ng-show="employeepension.department.$error.required && employeepension.department.$touched">select one</span>
-                </div>
-              </div>
-              <div class="form-group" ng-class="{'has-error': (employeepension.centraloffc_remarks.$invalid && employeepension.centraloffc_remarks.$touched)}">
+              <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">Remarks</label>
                 <div class="col-sm-8">
-                  <textarea  class="form-control" rows="4" ng-model="retired_employee.remarks" name="centraloffc_remarks"></textarea>
-                  <span class="help-block" ng-show="employeepension.centraloffc_remarks.$error.required && employeepension.centraloffc_remarks.$touched">Please enter your  remarks</span>
+                  <textarea  class="form-control" rows="4" ng-model="retired_employee.remarks" name="centraloffc_remarks" readonly></textarea>
                 </div>
-              </div>
-              <div class="box-footer">
-                <button type="submit" class="btn btn-default" ui-sref="retiredemployeelist">Back</button>
-                <button  type="submit" class="btn btn-info pull-right" ng-click="updateRetireDoc()">Submit</button>
-                <section  align="center" class="m-t-sm">
-                    <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
-                </section>
               </div>
             </form>
           </div>
