--- a/admin/pages/employeeDocuments.html
+++ b/admin/pages/employeeDocuments.html
@@ -97,7 +97,7 @@
           </div>
            <div class="box-footer">
             <button type="submit" class="btn btn-default" ui-sref="retiredemployeelist">Cancel</button>
-            <button ng-disabled="addEmployeeDocument.$invalid" type="submit" class="btn btn-info pull-right" ng-click="updateEmployeeDoc(employeeDoc.id)">Send to ULB</button>
+            <button ng-disabled="addEmployeeDocument.$invalid" type="submit" class="btn btn-info pull-right" ng-click="updateEmployeeDoc(employeeDoc.id)">Send to Central Office</button>
             <section  align="center m-t-sm">
                 <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
             </section>
@@ -200,7 +200,6 @@
         </div>
   		</div>
   	</div>
-
   </div>
   </div>
   </div>
