Updated the central office data

--- a/admin/pages/dashboard.html
+++ b/admin/pages/dashboard.html
@@ -34,7 +34,7 @@
       <div class="small-box bg-yellow">
         <div class="inner">
           <h3>{{empstatus.total_emp}}</h3>
-          <p>Total Employee List</p>
+          <p>Existing Employee List</p>
         </div>
         <div class="icon">
           <i class="ion ion-person-add"></i>
@@ -55,7 +55,7 @@
          <div class="icon">
            <i class="ion ion-bag"></i>
          </div>
-         <a class="small-box-footer" ui-sref="sectionDataList({section: 'ULB'})">View Status<i class="fa fa-arrow-circle-right"></i></a>
+         <a class="small-box-footer" ui-sref="ulbPendingCount">View Status<i class="fa fa-arrow-circle-right"></i></a>
        </div>
      </div>
 
