updated the letter format

--- a/admin/pages/auditObjection.html
+++ b/admin/pages/auditObjection.html
@@ -5,13 +5,30 @@
   </h1>
 </section>
 <section class="content" ng-init="loadEmpProfile()">
-    <div class="row">
-      <div class="col-sm-8 col-sm-offset-2">
-        <div class="" ng-if="is_coverPage">
+
           <div class="row">
         		<div class="col-sm-8 col-sm-offset-2">
         			<div class="doc-wrap" id="cover_page">
+						<div class="row m-b-20">
+        					<div class="col-sm-12 text-center">
+        						<p class="font-bold text-u-c font-sm">Goverment o odisha <br>Housing & Urban Development Department</p> 
+        					</div>
+        				</div>
         				<hr/>
+						<div class="row m-b-20">
+        					<div class="col-sm-12">
+        						<p>No: <span class="text-u-l">123456</span>/ HUD, Bhubaneswar, Dated the <span class="text-u-l">18/06/2016</span> </p>
+        					</div>
+        				</div>
+        				<hr/>
+        				<div class="row m-b-20">
+        					<div class="col-sm-2">
+        						<strong>From</strong>
+        					</div>
+        					<div class="col-sm-10">
+        						<p>Secretary to Government</p>
+        					</div>
+        				</div>
         				<div class="row m-b-20">
         					<div class="col-sm-2">
         						<strong>To</strong>
@@ -27,22 +44,34 @@
         						<strong>Sub :</strong>
         					</div>
         					<div class="col-sm-10">
-        						<p>{{updatedData.remarks}} </p>
+        						<p>Compliance to Audit Objection </p>
         					</div>
         				</div>
         				<hr/>
         				<div class="row m-b-20">
-        					<div class="col-sm-112">
-        						<p style="text-indent: 40px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas gravida euismod elit ac consequat. Sed vel nisl odio. Ut mattis ex laoreet, rutrum tellus sed, pretium turpis.rutrum tellus sed, pretium turpis.rutrum tellus sed, pretium turpis.rutrum tellus sed, pretium turpis.rutrum tellus sed, pretium turpis.</p>
+        					<div class="col-sm-12">
+								<strong>Sir,</strong>
+        						<p style="text-indent: 40px; height:300px">I am directed to invite a reference to the subject cited above and to send herewith the original service book & pension / Family pension papers of Sri/Smt <span class="text-u-c">{{updatedData.name}}</span> with a request to comply the follwing points and the proposal with required papers / documents may be resubmitted again for further follow up action at this end.</p>
         					</div>
         				</div>
 
         				<div class="row m-b-20">
-                  <div class="col-sm-6">
-                  </div>
+							<div class="col-sm-6"></div>
         					<div class="col-sm-6 text-right">
         						<p>Your's Faithfully</p>
         					</div>
+        				</div>
+        				<div class="row m-t-40">
+							<div class="col-sm-8"></div>
+							<div class="col-sm-4 text-right">
+								<span class="clearfix">Under Secretary to Goverment</span>
+							</div>
+        				</div>
+        				<div class="row">
+							<div class="col-sm-12 m-t-20">
+								Memo No <span class="text-u-l">7036</span>/HUD, Bhubaneswar, Dated the <span class="text-u-l">18/09/2016</span><br>
+								Copy forwarded to Gopal Sahu, Barmunda, Bhubaneswar, 751001
+							</div>
         				</div>
         			</div>
               <div class="row m-b-20">
@@ -52,7 +81,5 @@
               </div>
         		</div>
         	</div>
-        </div>
-    </div>
-  </div>
+
 </section>
