--- a/admin/pages/auditObjection.html
+++ b/admin/pages/auditObjection.html
@@ -51,7 +51,7 @@
         				<div class="row m-b-20">
         					<div class="col-sm-12">
 								<strong>Sir,</strong>
-        						<p style="text-indent: 40px; height:300px">I am directed to invite a reference to the subject cited above and to send herewith the original service book & pension / Family pension papers of Sri/Smt <span class="text-u-c">{{updatedData.name}}</span> with a request to comply the follwing points and the proposal with required papers / documents may be resubmitted again for further follow up action at this end.</p>
+        						<p style="text-indent: 40px; min-height:280px">I am directed to invite a reference to the subject cited above and to send herewith the original service book & pension / Family pension papers of Sri/Smt <span class="text-u-c">{{updatedData.name}}</span> with a request to comply the follwing points and the proposal with required papers / documents may be resubmitted again for further follow up action at this end.</p>
         					</div>
         				</div>
 
