--- a/admin/pages/auditObjection.html
+++ b/admin/pages/auditObjection.html
@@ -11,13 +11,13 @@
         			<div class="doc-wrap" id="cover_page">
 						<div class="row m-b-20">
         					<div class="col-sm-12 text-center">
-        						<p class="font-bold text-u-c font-sm">Goverment o odisha <br>Housing & Urban Development Department</p> 
+        						<p class="font-bold text-u-c font-sm">Goverment o odisha <br>Housing & Urban Development Department</p>
         					</div>
         				</div>
         				<hr/>
 						<div class="row m-b-20">
         					<div class="col-sm-12">
-        						<p>No: <span class="text-u-l">123456</span>/ HUD, Bhubaneswar, Dated the <span class="text-u-l">18/06/2016</span> </p>
+        						<p>No: <label contenteditable="true" class="contentEdit"></label>/ HUD, Bhubaneswar, Dated the <label contenteditable="true" class="contentEdit"></label></p>
         					</div>
         				</div>
         				<hr/>
@@ -48,10 +48,15 @@
         					</div>
         				</div>
         				<hr/>
-        				<div class="row m-b-20">
+        				<div class="row">
         					<div class="col-sm-12">
-								<strong>Sir,</strong>
-        						<p style="text-indent: 40px; min-height:280px">I am directed to invite a reference to the subject cited above and to send herewith the original service book & pension / Family pension papers of Sri/Smt <span class="text-u-c">{{updatedData.name}}</span> with a request to comply the follwing points and the proposal with required papers / documents may be resubmitted again for further follow up action at this end.</p>
+                    <strong>Sir,</strong>
+        						<p style="text-indent: 40px;">I am directed to invite a reference to the subject cited above and to send herewith the original service book & pension / Family pension papers of Sri/Smt <strong class="text-u-c ">{{retired_employee.name}}</strong> with a request to comply the follwing points and the proposal with required papers / documents may be resubmitted again for further follow up action at this end.</p>
+        					</div>
+        				</div>
+                <div class="row m-b-20">
+        					<div class="col-sm-12">
+        						<label contenteditable="true" style="min-height:280px;width:100%;padding:5px 15px;">1.</label>
         					</div>
         				</div>
 
@@ -69,8 +74,7 @@
         				</div>
         				<div class="row">
 							<div class="col-sm-12 m-t-20">
-								Memo No <span class="text-u-l">7036</span>/HUD, Bhubaneswar, Dated the <span class="text-u-l">18/09/2016</span><br>
-								Copy forwarded to Gopal Sahu, Barmunda, Bhubaneswar, 751001
+								Memo No <label contenteditable="true" class="contentEdit"></label>/HUD, Bhubaneswar, Dated the <label contenteditable="true" class="contentEdit"></label><br>
 							</div>
         				</div>
         			</div>
@@ -81,5 +85,4 @@
               </div>
         		</div>
         	</div>
-
 </section>
