--- a/admin/pages/reciveDocuments.html
+++ b/admin/pages/reciveDocuments.html
@@ -91,36 +91,61 @@
           </div>
           <div class="tab-pane" ng-class="{'active':currentTab == 'pension'}">
             <form class="form-horizontal" name="employeepension">
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">Pension Type</label>
                 <div class="col-sm-8">
                   <input type="text" class="form-control" ng-model="retired_employee.pension_type" readonly>
+                </div>
+              </div> -->
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-3 control-label">Pension Type</label>
+                <div class="col-sm-8">
+                  <select class="form-control" ng-model="retired_employee.pension_type" name="pension_type">
+                    <option value="">Select one</option>
+                    <option value="Pension">Pension</option>
+                    <option value="Family Pension">Family Pension</option>
+                  </select>
                 </div>
               </div>
               <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">Category</label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" ng-model="retired_employee.pension_category" readonly>
+                  <select class="form-control" ng-model="retired_employee.pension_category" name="pension_category" required>
+                    <option value="">Select one</option>
+                    <option value="LFS">LFS</option>
+                    <option value="NON LFS">Non LFS</option>
+                  </select>
                 </div>
               </div>
-              <div class="form-group" ng-if="retired_employee.pension_type != 'Pension'">
+              <div class="form-group" ng-if="retired_employee.pension_type == 'Family Pension'">
                 <label for="inputPassword3" class="col-sm-3 control-label">Nominee</label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" ng-model="retired_employee.nominee" readonly>
+                  <input type="text" class="form-control" ng-model="retired_employee.nominee">
                 </div>
               </div>
-              <div class="form-group" ng-if="retired_employee.pension_type != 'Pension'">
+              <div class="form-group" ng-if="retired_employee.pension_type == 'Family Pension'">
                 <label for="inputPassword3" class="col-sm-3 control-label">Relation with Employee</label>
                 <div class="col-sm-8">
-                  <input type="text" class="form-control" ng-model="retired_employee.relation" readonly>
+                  <input type="text" class="form-control" ng-model="retired_employee.relation">
                 </div>
               </div>
-              <div class="form-group" ng-if="retired_employee.dod">
+              <div class="form-group" ng-if="retired_employee.dod && retired_employee.pension_type == 'Family Pension'">
+                <label for="inputPassword3" class="col-sm-3 control-label">Date of Death/ In Service Death</label>
+                <div class="col-sm-8">
+                    <p class="input-group">
+                      <input type="text" class="form-control" placeholder="Date of Death" uib-datepicker-popup ng-model="retired_employee.dod" is-open="popup1.opened1" datepicker-options="dateOptions" close-text="Close"/>
+                      <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
+                      </span>
+                    </p>
+                </div>
+              </div>
+              <!-- <div class="form-group" ng-if="retired_employee.dod && retired_employee.pension_type != 'Pension'">
                 <label for="inputPassword3" class="col-sm-3 control-label">Date of Death/In service Death</label>
                 <div class="col-sm-8">
                   <input type="text" class="form-control" ng-model="retired_employee.dod" readonly>
                 </div>
-              </div>
+              </div> -->
               <div class="form-group" ng-class="{'has-error': (employeepension.dept_refno.$invalid && employeepension.dept_refno.$touched)}">
                 <label for="inputPassword3" class="col-sm-3 control-label">Department Ref.No</label>
                 <div class="col-sm-8">
@@ -180,7 +205,7 @@
               <div class="form-group" ng-if="retired_employee.send_to == 'ULB'">
                 <label for="inputPassword3" class="col-sm-3 control-label">Reason</label>
                 <div class="col-sm-8">
-                    <select class="form-control" ng-model="retired_employee.status" name="department" required>
+                    <select class="form-control" ng-model="retired_employee.status" name="department">
                       <option value="">Select One</option>
                       <option value="Rejected">Rejected</option>
                       <option value="Sactioned">Sanctioned</option>
@@ -197,7 +222,7 @@
               </div>
               <div class="box-footer">
                 <button type="submit" class="btn btn-default" ui-sref="retiredemployeelist">Back</button>
-                <button  type="submit" class="btn btn-info pull-right" ng-click="updateRetireDoc()">Submit</button>
+                <button  ng-disable="employeepension.$invalid" type="submit" class="btn btn-info pull-right" ng-click="updateRetireDoc()">Submit</button>
                 <section  align="center" class="m-t-sm">
                     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
                 </section>
